--- a/paper.tex
+++ b/paper.tex
@@ -82,7 +82,16 @@ $*$to whom correspondence should be addressed: aviv@einstein.yu.edu}
 
 \begin{bibunit}[unsrtnat]
 
-\section{\refsupp{}}
+\begin{widetext}
+\begin{center}
+\text{\large \refsupp{} for }\\
+\textbf{\large Hierarchical Network Structure Promotes Dynamical Robustness}\\
+\text{Cameron Smith, Raymond S. Puzio, Aviv Bergman$^*$}\\
+\text{$^*$Corresponding author. E-mail: aviv@einstein.yu.edu}
+\end{center}
+\end{widetext}
+
+% \section{\refsupp{}}
 
 \input{tex/results}
 \input{tex/methods}
