swap Supplementary Material with Supporting Information

--- a/header.tex
+++ b/header.tex
@@ -187,7 +187,7 @@ urlcolor=[rgb]{.09 .29 .54}}
 \def\reffigrobusthierarchy{\ref{fig:combined}B}
 \def\reffigconnectcycle3D3x3{\ref{fig:combined}C}
 \def\reffigconnectdist3D3x3{\ref{fig:combined}D}
-\def\refsupp{Supplementary Material}
+\def\refsupp{Supporting Information}
 %% END MACROS SECTION
 
 \usepackage{flushend}
