use pnas bst file

--- a/paper.tex
+++ b/paper.tex
@@ -37,7 +37,7 @@ $*$to whom correspondence should be addressed: aviv@einstein.yu.edu}
 % \listoftodos
 % \tableofcontents
 
-\begin{bibunit}[Science]
+\begin{bibunit}[pnas]
 
 % \section{Introduction}
 \input{tex/introduction}
