--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -16,5 +16,9 @@ Investigating generic properties of a large class of dynamical systems was the a
 % \label{fig:biomodelexamples}
 % \end{figure*}
 
-Here we determine the relationship between network hierarchy, a topological property, and the probability of \emph{robustness}, a dynamical property. Robustness is of interest in biological systems at all scales, and has been previously studied in the context of biochemical reaction networks \cite{Shinar2010}, gene-regulatory networks \cite{VanNimwegen1999,Siegal2002,Draghi2010,Wagner2013}, and ecological networks \cite{Rohr2014}. For the purpose of this investigation, we quantify dynamical robustness as the probability of stability to potentially large perturbations of the parameters for systems which have already been determined to be stable in the sense of linear stability analysis \cite{Davis1962}. The maximally hierarchical network is considered to be the graph associated to the total ordering (\refsupp{} and \cite{Cormen2009}). An example of this for three system components is shown in \reffigscc{} top. We use a measure of hierarchy based upon the edit distance from this maximally hierarchical network \cite{Axenovich2011}. We demonstrate that systems with the most hierarchical network topology according to this definition exhibit maximal robustness and explain why this results from an invariance of robustness to particular kinds of transformations of the network topology. Moreover these results hold for networks of arbitrary size and independent of the probability distribution from which the strengths of interaction are sampled.
+Here we determine the relationship between network hierarchy, a topological property, and the probability of \emph{robustness}, a dynamical property. Robustness is of interest in biological systems at all scales, and has been previously studied in the context of biochemical networks \cite{Alon1999,Shinar2010}, gene-regulatory networks \cite{VanNimwegen1999,Siegal2002,Draghi2010,Wagner2013}, and ecological networks \cite{Rohr2014}. Over physiological timescales, the robustness of a particular network state may be evaluated by determining its linear stability \cite{Davis1962}. Network states that are linearly stable, are robust to perturbations in the states of their components. For example, in the case of gene-regulatory networks, a state vector containing protein molecule counts or concentrations of each gene that is stable with respect to the dynamics of the network will exponentially suppress any relatively small modifications to the state of a gene and return to the initial stable state. Here we are interested in evaluating robustness over evolutionary as opposed to physiological timescales.
+
+Over evolutionary timescales it is expected for there to be fluctuations, not only in the state, but in any aspect of the model specifying the dynamics of the network itself (i.e. parameters, structure of the rate functions, state variables, etc.). It is therefore also expected that network architectures managing to persist over such timescales may be required to do so with modifications to the location of their stable states. However, what must remain invariant on such evolutionary timescales is the higher-level constraint that the system possess a stable attractor at all associated to the basin selected at the initiation of its dynamics. This is necessary in order for particular lower-level networks to remain \emph{observable} long enough to serve as the substrate out of which relatively higher-level ones are constructed \cite{Simon2002}. What is important over at least moderate evolutionary timescales is then the conditional probability $R$, given that a system possesses a stable state somewhere in its state space, that upon modifications to its structure, it continues to possess such a stable state, regardless of where that state is located within the state space \ref{fig:robustnessconcept}. For the purpose of this investigation then, we quantify dynamical robustness as the probability of stability to potentially large perturbations of the model specifying the system dynamics for systems which have already been determined to be stable in the sense of linear stability analysis.
+
+The maximally hierarchical network is considered to be the graph associated to the total ordering (\refsupp{} and \cite{Cormen2009}). An example of this for three system components is shown in \reffigscc{} top. We use a measure of hierarchy based upon the edit distance from this maximally hierarchical network \cite{Axenovich2011}. We demonstrate that systems with the most hierarchical network topology according to this definition exhibit maximal robustness and explain why this results from an invariance of robustness to particular kinds of transformations of the network topology. Moreover these results hold for networks of arbitrary size and independent of the probability distribution from which the strengths of interaction are sampled.
 % \cite{WADDINGTON1942a,VanNimwegen1999,Siegal2002,Ciliberti2007b,Ciliberti2007,Wagner2013}
