--- a/tex/methods.tex
+++ b/tex/methods.tex
@@ -36,7 +36,7 @@ The Jacobian at $\vec{x}^0$ is given as
 \end{align*}
 where $i \neq j$.
 % \end{widetext}
-By combining the equations $F_i(\vec{x}^0) = 0$ from \ref{eq:crnarbitraryjacobian} and $\frac{\partial F_i}{c_j}|_{\vec{x}^0} = M_{ij}$ we obtain the equivalent system of equations
+By combining the equations $F_i(\vec{x}^0) = 0$ from \ref{eq:crnarbitraryjacobian} and $\frac{\partial F_i}{\partial c_j}|_{\vec{x}^0} = M_{ij}$ we obtain the equivalent system of equations
 \begin{align}
 & k_{2A_i \to 3A_i} - k_{\emptyset \to A_i} = M_{ii} + \sum_{\substack{1 \le j \le N \\ j \neq i \\ G_{ij} = 1}} k_{A_j \to A_i + A_j} \label{eq:jacobianconstraint1}  \\
 & 2k_{2A_i \to 3A_i} - k_{A_i \to \emptyset} = M_{ii} + \sum_{\substack{1 \le j \le N \\ j \neq i \\ G_{ij} = 1}} k_{A_i + A_j \to A_j} \label{eq:jacobianconstraint2}\\
